HelloUltraviolet/Fixtures/RejectedSource/Expressions/RecordDefaultConstructionEligibility/Expected.uv
//! Expected diagnostic metadata for the RecordDefaultConstructionEligibility rejected-source specimen.

expectedDiagnostic("E-TYP-1911", "def.16.RecordDefaultConstructionEligibility")
